--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
         <title>• Portfolio</title>
+
+        <meta property="og:title" content="Jeremiah J. - Portfolio">
+        <meta property="og:description" content="Jeremiah J. aka Mr. Lolegic, a 17-year-old nerd with a passion for programming, scripting, AI, and cybersecurity. I love learning new things and building innovative projects.">
+        <meta property="og:image" content="./public/images/pfp.jpg">
+        <meta property="og:url" content="https://mr-lolegic.tech/">
+        <meta property="og:type" content="website">
         
         <link rel="icon" href="./public/images/pfp.jpg"/>
         <link rel="stylesheet" href="./public/css/index.css"/>
