--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
         <meta property="og:title" content="Jeremiah J. - Portfolio">
         <meta property="og:description" content="Jeremiah J. aka Mr. Lolegic, a 17-year-old nerd with a passion for programming, scripting, AI, and cybersecurity. I love learning new things and building innovative projects.">
-        <meta property="og:image" content="./public/images/pfp.jpg">
+        <meta property="og:image" content="https://mr-lolegic.tech/public/images/pfp.jpg">
         <meta property="og:url" content="https://mr-lolegic.tech/">
         <meta property="og:type" content="website">
         
