--- a/index.html
+++ b/index.html
@@ -6,22 +6,12 @@
 
         <title>• Portfolio</title>
 
-        <meta name="description" content="Jeremiah J. aka Mr. Lolegic, a 17-year-old nerd with a passion for programming, scripting, AI, and cybersecurity. I love learning new things and building innovative projects.">
-        <meta name="author" content="Jeremiah J.">
-
-        <meta property="og:url" content="https://mr-lolegic.tech">
-        <meta property="og:type" content="website">
         <meta property="og:title" content="Jeremiah J. - Portfolio">
         <meta property="og:description" content="Jeremiah J. aka Mr. Lolegic, a 17-year-old nerd with a passion for programming, scripting, AI, and cybersecurity. I love learning new things and building innovative projects.">
-        <meta property="og:image" content="https://ogcdn.net/2c2c6737-47d4-4459-9969-e711eb48394c/v1/mr-lolegic.tech/Jeremiah%20J.%20-%20Portfolio/Jeremiah%20J.%20aka%20Mr.%20Lolegic%2C%20a%2017-year-old%20nerd%20with%20a%20passion%20for%20programming%2C%20scripting%2C%20AI%2C%20and%20cybersecurity.%20I%20love%20learning%20new%20things%20and%20building%20innovative%20projects./https%3A%2F%2Fmr-lolegic.tech%2Fpublic%2Fimages%2Fpfp.jpg/og.png">
-
-        <meta name="twitter:card" content="summary_large_image">
-        <meta property="twitter:domain" content="mr-lolegic.tech">
-        <meta property="twitter:url" content="https://mr-lolegic.tech">
-        <meta name="twitter:title" content="Jeremiah J. - Portfolio">
-        <meta name="twitter:description" content="Jeremiah J. aka Mr. Lolegic, a 17-year-old nerd with a passion for programming, scripting, AI, and cybersecurity. I love learning new things and building innovative projects.">
-        <meta name="twitter:image" content="https://ogcdn.net/2c2c6737-47d4-4459-9969-e711eb48394c/v1/mr-lolegic.tech/Jeremiah%20J.%20-%20Portfolio/Jeremiah%20J.%20aka%20Mr.%20Lolegic%2C%20a%2017-year-old%20nerd%20with%20a%20passion%20for%20programming%2C%20scripting%2C%20AI%2C%20and%20cybersecurity.%20I%20love%20learning%20new%20things%20and%20building%20innovative%20projects./https%3A%2F%2Fmr-lolegic.tech%2Fpublic%2Fimages%2Fpfp.jpg/og.png">
-
+        <meta property="og:image" content="https://mr-lolegic.tech/public/images/pfp.jpg">
+        <meta property="og:url" content="https://mr-lolegic.tech/">
+        <meta property="og:type" content="website">
+        
         <link rel="icon" href="./public/images/pfp.jpg"/>
         <link rel="stylesheet" href="./public/css/index.css"/>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"/>
