--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <div class="carousel-container">
                     <div class="carousel">
                         <div class="carousel-item" onclick="openUrl('https://github.com/MrLolegic/Webfolio')">
-                            <img src="./public/images/webfolio.png" alt="Project 1">
+                            <img src="./public/images/webfolio.png" alt="Webfolio">
                             <div class="carousel-text">
                                 <h3>Webfolio</h3>
                                 <p>A repo filled with web related things I've made.</p>
@@ -44,8 +44,18 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="carousel-item" onclick="openUrl('https://github.com/MrLolegic/Lua-Bytecode-Parser')">
+                            <img src="./public/images/luaParser.png" alt="Lua Bytecode Parser">
+                            <div class="carousel-text">
+                                <h3>Lua Bytecode Parser</h3>
+                                <p>A simple lua 5.1.5 bytecode parser.</p>
+                                <div class="project-buttons">
+                                    <a><i class="bi bi-github"></i></a>
+                                </div>
+                            </div>
+                        </div>
                         <div class="carousel-item" onclick="openUrl('https://github.com/MrLolegic')">
-                            <img src="./public/images/coming-soon.png" alt="Project 1">
+                            <img src="./public/images/coming-soon.png" alt="Mr. Logi">
                             <div class="carousel-text">
                                 <h3>Mr. Logi</h3>
                                 <p>Coming soon...</p>
