--- a/index.html
+++ b/index.html
@@ -54,6 +54,16 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="carousel-item" onclick="openUrl('https://github.com/MrLolegic/Basic-DLL-Injector')">
+                            <img src="./public/images/basicinjector.png" alt="Mr. Logi">
+                            <div class="carousel-text">
+                                <h3>Mr. Logi</h3>
+                                <p>Coming soon...</p>
+                                <div class="project-buttons">
+                                    <a><i class="bi bi-github"></i></a>
+                                </div>
+                            </div>
+                        </div>
                         <div class="carousel-item" onclick="openUrl('https://github.com/MrLolegic')">
                             <img src="./public/images/coming-soon.png" alt="Mr. Logi">
                             <div class="carousel-text">
