--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
                         <div class="carousel-item" onclick="openUrl('https://github.com/MrLolegic/Basic-DLL-Injector')">
                             <img src="./public/images/basicinjector.png" alt="Mr. Logi">
                             <div class="carousel-text">
-                                <h3>Mr. Logi</h3>
-                                <p>Coming soon...</p>
+                                <h3>Basic DLL Injector</h3>
+                                <p>This is a simple DLL injector that I made in C++, only tested with notepad.</p>
                                 <div class="project-buttons">
                                     <a><i class="bi bi-github"></i></a>
                                 </div>
