--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
 
             <hr/>
             <section>
+                <canvas id="blobs-canvas"></canvas>
+
                 <h2 class="text">Projects</h2>
             
                 <div class="carousel-container">
@@ -100,5 +102,6 @@
         </div>
         <script src="./public/javascript/utilities.js"></script>
         <script src="./public/javascript/carousel.js"></script>
+        <script src="./public/javascript/blobs.js"></script>
     </body>
 </html>
