--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     </head>
 
     <body>
+        <canvas id="blobs-canvas"></canvas>
         <div class="main-container">
             <header class="animated-header">
                 <img class="pfp animated-element slide-in" src="./public/images/pfp.jpg" alt="I am bob">
@@ -27,7 +28,6 @@
                 </p>
             </header>
             
-
             <hr/>
             <section>
                 <h2 class="text">Projects</h2>
@@ -98,7 +98,7 @@
                 <h3 class="text sm-text animated-element">&copy; • Jeremiah J.</h3>
             </footer>            
         </div>
-        <script src="./public/javascript/utilities.js"></script>
-        <script src="./public/javascript/carousel.js"></script>
+        <script src="./public/javascript/index.js"></script>
+        <script src="./public/javascript/blobs.js"></script>
     </body>
 </html>
