--- a/index.html
+++ b/index.html
@@ -80,11 +80,11 @@
 
             <hr/>
             <section class="animated-element">
-                <h2 class="text">Github Stats</h2>
-                <object data="https://github-readme-streak-stats.herokuapp.com/?user=mrlolegic&theme=vue-dark&hide_border=false" type="image/svg+xml" class="mb1 responsive-image"></object>
-                <object data="https://github-readme-stats.vercel.app/api?username=mrlolegic&theme=vue-dark&show_icons=true&hide_border=false&count_private=true" type="image/svg+xml" class="mb1 responsive-image"></object>
-                <object data="https://github-readme-stats.vercel.app/api/top-langs/?username=mrlolegic&theme=vue-dark&show_icons=true&hide_border=false&layout=compact" type="image/svg+xml" class="mb1 responsive-little-image"></object>
-            </section>
+    		<h2 class="text">Github Stats</h2>
+    		<object data="https://github-readme-streak-stats.herokuapp.com?user=mrlolegic&theme=transparent&border_radius=8&border=9DA1B0" type="image/svg+xml" class="mb1 responsive-image"></object>
+    		<object data="https://github-readme-stats.vercel.app/api?username=mrlolegic&theme=transparent&show_icons=true&hide_border=false&count_private=true&border_radius=8&border=9DA1B0" type="image/svg+xml" class="mb1 responsive-image"></object>
+    		<object data="https://github-readme-stats.vercel.app/api/top-langs/?username=mrlolegic&theme=transparent&show_icons=true&hide_border=false&layout=compact&border_radius=8&border=9DA1B0" type="image/svg+xml" class="mb1 responsive-little-image"></object>
+	    </section>
 
             
             <hr/>
